--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
   </head>
   <body>
     <!-- header -->
@@ -42,11 +47,11 @@
         <button type="button">Order Service</button>
       </section>
       <!-- section1 -->
-      <section>
+      <section class="benefits">
         <h2 hidden>Benefits</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="h3">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -123,63 +128,64 @@
       </section>
     </main>
     <!-- section 3 -->
-    <h2>Portfolio</h2>
+    <h2 class="porfolio">Portfolio</h2>
     <ul>
-      <li>
-        <img src="./images/banking-app.jpg"
-        alt="banking app"
-        height="300"
-        width="360">
-          <h3>Banking App</h3>
-          <p>App</p>
-        </img>
+      <li class="services">
+        <img
+          src="./images/banking-app.jpg"
+          alt="banking app"
+          height="300"
+          width="360"
+        />
+        <h3>Banking App</h3>
+        <p>App</p>
       </li>
       <li>
-        <img src="./images/cashless-pay.png"
-        alt="cashless pay"
-        height="300"
-        width="360">
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </a>
+        <img
+          src="./images/cashless-pay.jpg"
+          alt="cashless pay"
+          height="300"
+          width="360"
+        />
+        <h3>Cashless Payment</h3>
+        <p>Marketing</p>
       </li>
       <li>
-        <img src="./images/meditation.png"
-         alt="meditation app"
-        height="300"
-        width="360">
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </a>
+        <img
+          src="./images/meditation.jpg"
+          alt="meditation app"
+          height="300"
+          width="360"
+        />
+        <h3>Meditation App</h3>
+        <p>App</p>
       </li>
     </ul>
     <ul>
-      <li>
-        <img src="./images/taxi.jpg"
-         alt="taxi"
-        height="300"
-        width="360">
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </a>
+      <li class="services">
+        <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
+        <h3>Taxi Service</h3>
+        <p>Marketing</p>
       </li>
       <li>
-        <img src="./images/screen-illustrator.jpg"
-         alt="screen illustrator"
-        height="300"
-        width="360">
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </a>
+        <img
+          src="./images/screen-illustrator.jpg"
+          alt="screen illustrator"
+          height="300"
+          width="360"
+        />
+        <h3>Screen Illustrations</h3>
+        <p>Design</p>
       </li>
       <li>
-        <img src="images/online-courses.jpg"
-         alt="online courses"
-        height="300"
-        width="360">
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </a>
+        <img
+          src="images/online-courses.jpg"
+          alt="online courses"
+          height="300"
+          width="360"
+        />
+        <h3>Online Courses</h3>
+        <p>Marketing</p>
       </li>
     </ul>
     <!-- footer -->
