--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
         <!-- logo -->
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo2"><span class="logo1">Web</span>Studio</a>
+        <ul class="navigation">
           <!-- navigation -->
           <li>
             <a href="#">Studio</a>
@@ -30,7 +30,7 @@
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -42,20 +42,20 @@
     </header>
     <main>
       <!-- hero -->
-      <section>
+      <section class="hero">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
       <!-- section1 -->
       <section class="benefits">
         <h2 hidden>Benefits</h2>
         <ul class="list">
           <li>
-            <h3 class="h3">Strategy</h3>
+            <h3 class="header3">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
-            </p>
+            </p class="list-benefits">
           </li>
           <li>
             <h3>Punctuality</h3>
@@ -81,7 +81,7 @@
         </ul>
       </section>
       <!-- section2 -->
-      <section>
+      <section class="our-team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -128,7 +128,7 @@
       </section>
     </main>
     <!-- section 3 -->
-    <h2 class="porfolio">Portfolio</h2>
+    <h2 class="porfolio">Our Portfolio</h2>
     <ul>
       <li class="services">
         <img
@@ -189,8 +189,8 @@
       </li>
     </ul>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer-text">
+      <a href="./index.html" class="logo3" ><span class="logo1">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
