--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
       <nav>
         <!-- logo -->
         <a href="./index.html" class="logo2"><span class="logo1">Web</span>Studio</a>
-        <ul class="navigation">
+        <ul>
           <!-- navigation -->
           <li>
-            <a href="#">Studio</a>
+            <a href="#" class="navigation">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="#" class="navigation">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a href="#" class="navigation">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul class="address">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
