--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
     />
@@ -15,7 +23,9 @@
     <header>
       <nav>
         <!-- logo -->
-        <a href="./index.html" class="logo2"><span class="logo1">Web</span>Studio</a>
+        <a href="./index.html" class="logo2"
+          ><span class="logo1">Web</span>Studio</a
+        >
         <ul>
           <!-- navigation -->
           <li>
@@ -32,7 +42,9 @@
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
             <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
@@ -55,9 +67,9 @@
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
-            </p class="list-benefits">
+            </p>
           </li>
-          <li>
+          <li class="list-benefits">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
@@ -190,7 +202,9 @@
     </ul>
     <!-- footer -->
     <footer class="footer-text">
-      <a href="./index.html" class="logo3" ><span class="logo1">Web</span>Studio</a>
+      <a href="./index.html" class="logo3"
+        ><span class="logo1">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
