--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -12,12 +15,13 @@
     <header>
       <nav>
         <!-- logo -->
-        <a href="./index.html" class="logo2"
-          >Web<span class="logo_span"></span>Studio</span></a>
-        <ul>
+        <a href="./index.html" class="web"
+          >Web<span class="studio_logo">Studio</span></a
+        >
+        <ul class="navigation">
           <!-- navigation -->
           <li>
-            <a href="#" class="navigation">Studio</a>
+            <a href="#" class="studio_nav">Studio</a>
           </li>
           <li>
             <a href="#" class="navigation">Portfolio</a>
@@ -47,17 +51,17 @@
         <button type="button" class="button">Order Service</button>
       </section>
       <!-- section1 -->
-      <section class="benefits">
+      <section>
         <h2 hidden>Benefits</h2>
         <ul class="list">
           <li>
-            <h3 class="header3">Strategy</h3>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="list-benefits">
+          <li class>
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
@@ -81,7 +85,7 @@
         </ul>
       </section>
       <!-- section2 -->
-      <section class="our-team">
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -126,72 +130,74 @@
           </li>
         </ul>
       </section>
+      <!-- section 3 -->
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li class="services">
+            <img
+              src="./images/banking-app.jpg"
+              alt="banking app"
+              height="300"
+              width="360"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-pay.jpg"
+              alt="cashless pay"
+              height="300"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation.jpg"
+              alt="meditation app"
+              height="300"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrator.jpg"
+              alt="screen illustrator"
+              height="300"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="images/online-courses.jpg"
+              alt="online courses"
+              height="300"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <!-- section 3 -->
-    <h2 class="porfolio">Our Portfolio</h2>
-    <ul>
-      <li class="services">
-        <img
-          src="./images/banking-app.jpg"
-          alt="banking app"
-          height="300"
-          width="360"
-        />
-        <h3>Banking App</h3>
-        <p>App</p>
-      </li>
-      <li>
-        <img
-          src="./images/cashless-pay.jpg"
-          alt="cashless pay"
-          height="300"
-          width="360"
-        />
-        <h3>Cashless Payment</h3>
-        <p>Marketing</p>
-      </li>
-      <li>
-        <img
-          src="./images/meditation.jpg"
-          alt="meditation app"
-          height="300"
-          width="360"
-        />
-        <h3>Meditation App</h3>
-        <p>App</p>
-      </li>
-    </ul>
-    <ul>
-      <li class="services">
-        <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
-        <h3>Taxi Service</h3>
-        <p>Marketing</p>
-      </li>
-      <li>
-        <img
-          src="./images/screen-illustrator.jpg"
-          alt="screen illustrator"
-          height="300"
-          width="360"
-        />
-        <h3>Screen Illustrations</h3>
-        <p>Design</p>
-      </li>
-      <li>
-        <img
-          src="images/online-courses.jpg"
-          alt="online courses"
-          height="300"
-          width="360"
-        />
-        <h3>Online Courses</h3>
-        <p>Marketing</p>
-      </li>
-    </ul>
     <!-- footer -->
-    <footer class="footer-text">
-      <a href="./index.html" class="logo3"
-        ><span class="logo1">Web</span>Studio</a
+    <footer class="footer">
+      <a href="./index.html" class="web"
+        >Web<span class="studio_footer">Studio</span></a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
