--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="navigation">
           <!-- navigation -->
           <li>
-            <a href="#" class="studio_nav">Studio</a>
+            <a href="./index.html" class="studio_nav">Studio</a>
           </li>
           <li>
             <a href="#" class="navigation">Portfolio</a>
