--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <!-- logo -->
         <a href="./index.html" class="web"
-          >Web<span class="studio_logo">Studio</span></a
+          >Web<span class="studio">Studio</span></a
         >
         <ul class="navigation">
           <!-- navigation -->
@@ -201,11 +201,11 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-      <a href="./index.html" class="web"
+    <footer class="footer_p">
+      <a href="./index.html" class="web_footer"
         >Web<span class="studio_footer">Studio</span></a
       >
-      <p>
+      <p class="footer_p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
