--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <a href="./index.html" class="studio_nav">Studio</a>
           </li>
           <li>
-            <a href="#" class="navigation">Portfolio</a>
+            <a href="" class="navigation">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="navigation">Contacts</a>
+            <a href="" class="navigation">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -102,7 +102,7 @@
               height="260"
             />
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="team_p">Product Designer</p>
           </li>
           <li>
             <img
