portfolio section update

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               height="300"
               width="360"
             />
-            <h3>Banking App</h3>
+            <h3 class="serv_head">Banking App</h3>
             <p>App</p>
           </li>
           <li>
@@ -157,7 +157,7 @@
               height="300"
               width="360"
             />
-            <h3>Cashless Payment</h3>
+            <h3 class="serv_head">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -167,14 +167,14 @@
               height="300"
               width="360"
             />
-            <h3>Meditation App</h3>
+            <h3 class="serv_head">Meditation App</h3>
             <p>App</p>
           </li>
         </ul>
         <ul>
           <li>
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
-            <h3>Taxi Service</h3>
+            <h3 class="serv_head">Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -184,7 +184,7 @@
               height="300"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
+            <h3 class="serv_head">Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
@@ -194,7 +194,7 @@
               height="300"
               width="360"
             />
-            <h3>Online Courses</h3>
+            <h3 class="serv_head">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
