--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <ul class="navigation">
           <!-- navigation -->
           <li>
-            <a href="./index.html" class="studio_nav">Studio</a>
+            <a href="./index.html" class="navigation"
+              ><span class="studio_nav">Studio</span></a
+            >
           </li>
           <li>
             <a href="" class="navigation">Portfolio</a>
@@ -37,15 +39,15 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address"
+            <a href="mailto:info@devstudio.com" class="telmail"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="telmail">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
