--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
       </section>
       <!-- section 3 -->
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio">Our Portfolio</h2>
         <ul>
           <li class="services">
+            <!-- 1 -->
             <img
               src="./images/banking-app.jpg"
               alt="banking app"
@@ -150,9 +151,10 @@
               width="360"
             />
             <h3 class="serv_head">Banking App</h3>
-            <p>App</p>
+            <p class="serv_p">App</p>
           </li>
           <li>
+            <!-- 2 -->
             <img
               src="./images/cashless-pay.jpg"
               alt="cashless pay"
@@ -160,9 +162,10 @@
               width="360"
             />
             <h3 class="serv_head">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="serv_p">Marketing</p>
           </li>
           <li>
+            <!-- 3 -->
             <img
               src="./images/meditation.jpg"
               alt="meditation app"
@@ -170,24 +173,25 @@
               width="360"
             />
             <h3 class="serv_head">Meditation App</h3>
-            <p>App</p>
+            <p class="serv_p">App</p>
           </li>
-        </ul>
-        <ul>
           <li>
+            <!-- 4 -->
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
             <h3 class="serv_head">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="serv_p">Marketing</p>
           </li>
           <li>
+            <!-- 5 -->
             <img
               src="./images/screen-illustrator.jpg"
               alt="screen illustrator"
               height="300"
               width="360"
             />
+            <!-- 6 -->
             <h3 class="serv_head">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="serv_p">Design</p>
           </li>
           <li>
             <img
@@ -197,7 +201,7 @@
               width="360"
             />
             <h3 class="serv_head">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="serv_p">Marketing</p>
           </li>
         </ul>
       </section>
