--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </li>
           <li>
             <img
-              src="images/online-courses.jpg"
+              src="./images/screen-illustrator.jpg"
               alt="online courses"
               height="300"
               width="360"
