--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               width="360"
             />
             <h3 class="serv_head">Banking App</h3>
-            <p class="serv_p">App</p>
+            <p class="ser_p">App</p>
           </li>
           <li>
             <!-- 2 -->
@@ -162,7 +162,7 @@
               width="360"
             />
             <h3 class="serv_head">Cashless Payment</h3>
-            <p class="serv_p">Marketing</p>
+            <p class="ser_p">Marketing</p>
           </li>
           <li>
             <!-- 3 -->
@@ -173,13 +173,13 @@
               width="360"
             />
             <h3 class="serv_head">Meditation App</h3>
-            <p class="serv_p">App</p>
+            <p class="ser_p">App</p>
           </li>
           <li>
             <!-- 4 -->
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
             <h3 class="serv_head">Taxi Service</h3>
-            <p class="serv_p">Marketing</p>
+            <p class="ser_p">Marketing</p>
           </li>
           <li>
             <!-- 5 -->
@@ -189,11 +189,11 @@
               height="300"
               width="360"
             />
-            <!-- 6 -->
             <h3 class="serv_head">Screen Illustrations</h3>
-            <p class="serv_p">Design</p>
+            <p class="ser_p">Design</p>
           </li>
           <li>
+            <!-- 6 -->
             <img
               src="./images/screen-illustrator.jpg"
               alt="online courses"
@@ -201,7 +201,7 @@
               width="360"
             />
             <h3 class="serv_head">Online Courses</h3>
-            <p class="serv_p">Marketing</p>
+            <p class="ser_p">Marketing</p>
           </li>
         </ul>
       </section>
