--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </section>
       <!-- section2 -->
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="teamheader">Our Team</h2>
         <ul>
           <li>
             <img
@@ -103,7 +103,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="names">Mark Guerrero</h3>
             <p class="team_p">Product Designer</p>
           </li>
           <li>
@@ -113,8 +113,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="names">Tom Ford</h3>
+            <p class="team_p">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -123,8 +123,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="names">Camila Garcia</h3>
+            <p class="team_p">Marketing</p>
           </li>
           <li>
             <img
@@ -133,8 +133,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="names">Daniel Wilson</h3>
+            <p class="team_p">UI Designer</p>
           </li>
         </ul>
       </section>
