--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="hero">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <!-- section1 -->
@@ -63,29 +63,29 @@
         <h2 hidden>Benefits</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="names">Strategy</h3>
+            <p class="team_p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="names">Punctuality</h3>
+            <p class="team_p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="names">Diligence</h3>
+            <p class="team_p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="names">Technologies</h3>
+            <p class="team_p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
