--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               height="260"
             />
             <h3 class="names">Mark Guerrero</h3>
-            <p class="team_p">Product Designer</p>
+            <p class="team-p">Product Designer</p>
           </li>
           <li>
             <img
@@ -114,7 +114,7 @@
               height="260"
             />
             <h3 class="names">Tom Ford</h3>
-            <p class="team_p">Frontend Developer</p>
+            <p class="team-p">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -134,14 +134,14 @@
               height="260"
             />
             <h3 class="names">Daniel Wilson</h3>
-            <p class="team_p">UI Designer</p>
+            <p class="team-p">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- section 3 -->
       <section class="portfolio">
         <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
+        <ul class="ls-color">
           <li class="services">
             <!-- 1 -->
             <img
@@ -162,7 +162,7 @@
               width="360"
             />
             <h3 class="serv_head">Cashless Payment</h3>
-            <p class="ser_p">Marketing</p>
+            <p class="ser-p">Marketing</p>
           </li>
           <li>
             <!-- 3 -->
@@ -173,13 +173,13 @@
               width="360"
             />
             <h3 class="serv_head">Meditation App</h3>
-            <p class="ser_p">App</p>
+            <p class="ser-p">App</p>
           </li>
           <li>
             <!-- 4 -->
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
             <h3 class="serv_head">Taxi Service</h3>
-            <p class="ser_p">Marketing</p>
+            <p class="ser-p">Marketing</p>
           </li>
           <li>
             <!-- 5 -->
@@ -190,7 +190,7 @@
               width="360"
             />
             <h3 class="serv_head">Screen Illustrations</h3>
-            <p class="ser_p">Design</p>
+            <p class="ser-p">Design</p>
           </li>
           <li>
             <!-- 6 -->
@@ -201,7 +201,7 @@
               width="360"
             />
             <h3 class="serv_head">Online Courses</h3>
-            <p class="ser_p">Marketing</p>
+            <p class="ser-p">Marketing</p>
           </li>
         </ul>
       </section>
