--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               height="300"
               width="360"
             />
-            <h3 class="serv_head">Banking App</h3>
-            <p class="ser_p">App</p>
+            <h3 class="serv-head">Banking App</h3>
+            <p class="ser-p">App</p>
           </li>
           <li>
             <!-- 2 -->
@@ -161,7 +161,7 @@
               height="300"
               width="360"
             />
-            <h3 class="serv_head">Cashless Payment</h3>
+            <h3 class="serv-head">Cashless Payment</h3>
             <p class="ser-p">Marketing</p>
           </li>
           <li>
@@ -172,13 +172,13 @@
               height="300"
               width="360"
             />
-            <h3 class="serv_head">Meditation App</h3>
+            <h3 class="serv-head">Meditation App</h3>
             <p class="ser-p">App</p>
           </li>
           <li>
             <!-- 4 -->
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
-            <h3 class="serv_head">Taxi Service</h3>
+            <h3 class="serv-head">Taxi Service</h3>
             <p class="ser-p">Marketing</p>
           </li>
           <li>
@@ -189,7 +189,7 @@
               height="300"
               width="360"
             />
-            <h3 class="serv_head">Screen Illustrations</h3>
+            <h3 class="serv-head">Screen Illustrations</h3>
             <p class="ser-p">Design</p>
           </li>
           <li>
