--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
         <ul class="list">
           <li>
             <h3 class="names">Strategy</h3>
-            <p class="team_p">
+            <p class="team-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class>
             <h3 class="names">Punctuality</h3>
-            <p class="team_p">
+            <p class="team-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="names">Diligence</h3>
-            <p class="team_p">
+            <p class="team-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="names">Technologies</h3>
-            <p class="team_p">
+            <p class="team-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
