hopefully final fix

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               height="260"
             />
             <h3 class="names">Camila Garcia</h3>
-            <p class="team_p">Marketing</p>
+            <p class="team-p">Marketing</p>
           </li>
           <li>
             <img
@@ -200,7 +200,7 @@
               height="300"
               width="360"
             />
-            <h3 class="serv_head">Online Courses</h3>
+            <h3 class="serv-head">Online Courses</h3>
             <p class="ser-p">Marketing</p>
           </li>
         </ul>
