not sure if final

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- section1 -->
       <section>
         <h2 hidden>Benefits</h2>
-        <ul class="list">
+        <ul class="listben">
           <li>
             <h3 class="names">Strategy</h3>
             <p class="team-p">
