trying to fix list 4 section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <section class="portfolio">
         <h2 class="portfolio">Our Portfolio</h2>
         <ul class="ls-color">
-          <li class="services">
+          <li class="ls-color">
             <!-- 1 -->
             <img
               src="./images/banking-app.jpg"
@@ -153,7 +153,7 @@
             <h3 class="serv-head">Banking App</h3>
             <p class="ser-p">App</p>
           </li>
-          <li>
+          <li class="ls-color">
             <!-- 2 -->
             <img
               src="./images/cashless-pay.jpg"
@@ -164,7 +164,7 @@
             <h3 class="serv-head">Cashless Payment</h3>
             <p class="ser-p">Marketing</p>
           </li>
-          <li>
+          <li class="ls-color">
             <!-- 3 -->
             <img
               src="./images/meditation.jpg"
@@ -175,13 +175,13 @@
             <h3 class="serv-head">Meditation App</h3>
             <p class="ser-p">App</p>
           </li>
-          <li>
+          <li class="ls-color">
             <!-- 4 -->
             <img src="./images/taxi.jpg" alt="taxi" height="300" width="360" />
             <h3 class="serv-head">Taxi Service</h3>
             <p class="ser-p">Marketing</p>
           </li>
-          <li>
+          <li class="ls-color">
             <!-- 5 -->
             <img
               src="./images/screen-illustrator.jpg"
@@ -192,7 +192,7 @@
             <h3 class="serv-head">Screen Illustrations</h3>
             <p class="ser-p">Design</p>
           </li>
-          <li>
+          <li class="ls-color">
             <!-- 6 -->
             <img
               src="./images/screen-illustrator.jpg"
