--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section class="team">
         <h2 class="teamheader">Our Team</h2>
         <ul>
-          <li>
+          <li class="ls-color">
             <img
               src="./images/mark-guerrero.jpg"
               alt="mark guerrero"
@@ -106,7 +106,7 @@
             <h3 class="names">Mark Guerrero</h3>
             <p class="team-p">Product Designer</p>
           </li>
-          <li>
+          <li class="ls-color">
             <img
               src="./images/tom-ford.jpg"
               alt="tom ford"
@@ -116,7 +116,7 @@
             <h3 class="names">Tom Ford</h3>
             <p class="team-p">Frontend Developer</p>
           </li>
-          <li>
+          <li class="ls-color">
             <img
               src="./images/camila-garcia.jpg"
               alt="camila garcia"
@@ -126,7 +126,7 @@
             <h3 class="names">Camila Garcia</h3>
             <p class="team-p">Marketing</p>
           </li>
-          <li>
+          <li class="ls-color">
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel wilson"
